# NKU-COSC0025-Parallel-Programming

./: .gitignore  README.md  test.sh
Lab1/: problem1_Linux.cpp  problem1_Linux_optimize.cpp  problem1_Linux_ordinary.cpp  problem1_Linux_unroll.cpp  problem1_Windows.cpp  problem2_Linux.cpp  problem2_Windows.cpp  test.cpp  思路.md
Lab1/problem1/: problem1_Linux.cpp
Lab1/problem2/: problem2_Linux.cpp  problem2_Linux_optimize.cpp  problem2_Linux_ordinary.cpp  problem2_Windows.cpp
Lab2/: KMeans_SIMD.cpp  KMeans_neon.cpp  KMeans_serial.cpp
Lab2/ARM/: KMeans_neon_cache.cpp
Lab2/report/: Lab2.md
Lab2/x86/: KMeans_SIMD.cpp  KMeans_serial.cpp
Lab3/: Gauss_serial.cpp
Lab3/ARM/: Gauss_arm.cpp  Gauss_pthread.cpp
Lab3/report/: report.md
Lab3/x86/: Gauss_pthread.cpp  Gauss_x86.cpp
Lab4/: Gauss_serial.cpp
Lab4/ARM/: Gauss_openmp.cpp
Lab4/report/: idea.md  report.md  result_arm.csv  result_x86.csv
Lab4/x86/: Gauss_openmp.cpp  offLoading.cpp  result.csv
Lab5/: CMakeLists.txt  main.cpp  test.cpp
Lab5/arm/: Gauss.cpp  am.csv
Lab5/report/: report.md
Lab5/x86/: Gauss.cpp  x86.csv
Lab6/: 01-add-error-handling.cu  01-basic-parallel.cu  01-multi-block-loop.cu  01-single-block-loop.cu  01-vector-add.cu
Lab6/Ex1/: 01-double-elements.cu  01-grid-stride-double.cu  01-hello-gpu.cu  01-mismatched-config-loop.cu  01-thread-and-block-idx.cu
Lab6/Ex2/: 02-get-device-properties.cu  02-page-faults-solution-cpu-only.cu  02-page-faults-solution-cpu-then-gpu.cu  02-page-faults-solution-gpu-only.cu  02-page-faults-solution-gpu-then-cpu.cu  02-saxpy-solution.cu  02-vector-add-1.cu  02-vector-add-init-in-kernel-solution.cu  02-vector-add-prefetch-solution-cpu-also.cu  02-vector-add-prefetch-solution.cu  02-vector-add.cu
Lab6/Ex3/: 03-init-kernel-solution.cu  03-nbody.cu  03-prefetch-check-solution.cu  03-print-numbers-solution.cu  03-print-numbers.cu  03-stream-init-solution.cu  03-vector-add-prefetch-solution.cu
Lab6/kmeans/: keams.h  kmeans.cu
Lab6/report/: report.md
final/: CMakeLists.txt  KMeans.cpp  KMeans.h  KMeansOMP.h  SIMDTest.cpp  main.cpp  test.cpp
final/src/: KMeans.cpp  KMeans.h  KMeansMPI.cpp  KMeansMPI.h  KMeansOMP.cpp  KMeansPthread.cpp  KMeansPthread.h  KMeansSIMD.cpp  KMeansSIMD.h  KMeansSerial.cpp  KMeansSerial.h  TestUtil.cpp  TestUtil.h
final/src/arm/: KMeansMPI.cpp  KMeansOMP.cpp  KMeansOMP.h  KMeansPthread.cpp  KMeansSIMD.cpp  KMeansSIMD.h
final/src/x86/: KMeansMPI.h  KMeansPthread.cpp  KMeansPthread.h  KMeansSIMD.cpp  KMeansSIMD.h
final/test/: CUDATest.cpp  MPITest.cpp  OMPTest.cpp  PthreadTest.cpp  SIMDTest.cpp  UnitTest.cpp
final/test/arm/: MPITest.cpp  OMPTest.cpp  PthreadTest.cpp  SIMDTest.cpp
final/test/x86/: MPITest.cpp  OMPTest.cpp  PthreadTest.cpp  SIMDTest.cpp
调研/: 调研.md
